--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "node app",
     "server": "nodemon app",
-    "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d"
+    "data:import": "node seeder",
+    "data:destroy": "node seeder -d"
   },
   "author": "Gandhi Shubham",
   "license": "ISC",
